# auto_translation

./: .gitignore  README.md  README_EN.md  annotate_icons.py  chat.py  cli.py  config.json  pdf_to_image.py  pyproject.toml  system_prompt.txt  test_tex_compiler.py
core/: __init__.py  agent.py  app_config.py  conversation_log.py  llm_client.py  prompts.py  rate_control.py  runtime.py
tools/: __init__.py  base.py  config.py  crop_image.py  directory_list.py  executor.py  factories.py  font_list.py  helpers.py  image_tools.py  pdf_reader.py  pdf_to_image.py  read_file.py  replace.py  tex_compiler.py  tex_compiler_gui.py  typst_compiler.py  write_file.py
ui/: __init__.py  session.py  terminal.py
