[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Auto-Translator"
version = "0.2.0"
description = "基于多 Agent 的自动翻译工具"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "PyMuPDF>=1.25.0",
    "pillow>=10.0.0",
]

[project.scripts]
chat = "ui.session:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "tools*"]
exclude = ["__pycache__*", ".venv*"]
